--- a/FrontEndTest.html
+++ b/FrontEndTest.html
@@ -19,8 +19,13 @@
 
             for (var i = 0; i < myList.length; i++) {
                 var row$ = $('<tr/>');
-                for (var colIndex = 0; colIndex < columns.length; colIndex++) {
-                    var cellValue = myList[i][columns[colIndex]];
+                for (var colIndex = 0; colIndex <= 3; colIndex++) {
+
+                    if (colIndex === 0) {
+                        var cellValue = '<a href="' +  myList[i][columns[4]] + '">' + myList[i][columns[colIndex]] + '</a>';
+                    } else {
+                        var cellValue = myList[i][columns[colIndex]];
+                    }
                     if (cellValue == null) cellValue = "";
                     row$.append($('<td/>').html(cellValue));
                 }
