--- a/public/index.html
+++ b/public/index.html
@@ -1,12 +1,12 @@
 <html>
 
 <head>
-    <script type="text/javascript" src="Preços.json"></script>
+    <script type="text/javascript" src="Precos.json"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"
         integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script>
         const buildTable = () => {
-            fetch("Preços.json")
+            fetch("Precos.json")
                 .then(response => response.json())
                 .then(mylist => {
                     buildHtmlTable('#precos', mylist);
