Changes for heroku

--- a/public/index.html
+++ b/public/index.html
@@ -43,7 +43,7 @@
             for (var i = 0; i < myList.length; i++) {
                 var rowHash = myList[i];
                 for (var key in rowHash) {
-                    if ($.inArray(key, columnSet) == -1) {
+                    if ($.inArray(key, columnSet) == -1 && key !== 'Link') {
                         columnSet.push(key);
                         headerTr$.append($('<th/>').html(key));
                     }
