--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
                 for (var colIndex = 0; colIndex <= 3; colIndex++) {
 
                     if (colIndex === 0) {
-                        var cellValue = '<a href="' +  myList[i][columns[4]] + '">' + myList[i][columns[colIndex]] + '</a>';
+                        var cellValue = '<a href="' + myList[i][columns[4]] + '">' + myList[i][columns[colIndex]] + '</a>';
                     } else {
                         var cellValue = myList[i][columns[colIndex]];
                     }
@@ -43,9 +43,11 @@
             for (var i = 0; i < myList.length; i++) {
                 var rowHash = myList[i];
                 for (var key in rowHash) {
-                    if ($.inArray(key, columnSet) == -1 && key !== 'Link') {
+                    if ($.inArray(key, columnSet) == -1) {
                         columnSet.push(key);
-                        headerTr$.append($('<th/>').html(key));
+                        if (key !== 'Link') {
+                            headerTr$.append($('<th/>').html(key));
+                        }
                     }
                 }
             }
