--- a/public/index.html
+++ b/public/index.html
@@ -4,61 +4,32 @@
     <script type="text/javascript" src="Precos.json"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"
         integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-    <script>
-        const buildTable = () => {
-            fetch("Precos.json")
-                .then(response => response.json())
-                .then(mylist => {
-                    buildHtmlTable('#precos', mylist);
-                });
-        }
-
-        // Builds the HTML Table out of myList.
-        function buildHtmlTable(selector, myList) {
-            var columns = addAllColumnHeaders(myList, selector);
-
-            for (var i = 0; i < myList.length; i++) {
-                var row$ = $('<tr/>');
-                for (var colIndex = 0; colIndex <= 3; colIndex++) {
-
-                    if (colIndex === 0) {
-                        var cellValue = '<a href="' + myList[i][columns[4]] + '">' + myList[i][columns[colIndex]] + '</a>';
-                    } else {
-                        var cellValue = myList[i][columns[colIndex]];
-                    }
-                    if (cellValue == null) cellValue = "";
-                    row$.append($('<td/>').html(cellValue));
-                }
-                $(selector).append(row$);
-            }
-        }
-
-        // Adds a header row to the table and returns the set of columns.
-        // Need to do union of keys from all records as some records may not contain
-        // all records.
-        function addAllColumnHeaders(myList, selector) {
-            var columnSet = [];
-            var headerTr$ = $('<tr/>');
-
-            for (var i = 0; i < myList.length; i++) {
-                var rowHash = myList[i];
-                for (var key in rowHash) {
-                    if ($.inArray(key, columnSet) == -1) {
-                        columnSet.push(key);
-                        if (key !== 'Link') {
-                            headerTr$.append($('<th/>').html(key));
-                        }
-                    }
-                }
-            }
-            $(selector).append(headerTr$);
-
-            return columnSet;
-        }
-    </script>
+    <script src="./script.js"> </script>
 </head>
 
 <body onLoad="buildTable()">
+
+    <form style="width:50%">
+        <input type="checkbox" value="1650">GTX 1650(Super)</input>
+        <input type="checkbox" value="1660" style="margin-left: 20px">GTX 1660(Super/Ti)</input>
+        <br>
+        <input type="checkbox" value="3060">RTX 3060Ti</input>
+        <input type="checkbox" value="3070" style="margin-left: 56px">RTX 3070</input>
+        <br>
+        <input type="checkbox" value="3080">RTX 3080</input>
+        <input type="checkbox" value="3090" style="margin-left: 69px">RTX 3090</input>
+        <br>
+        <input type="checkbox" value="5700">RX 5600XT</input>
+        <input type="checkbox" value="5700" style="margin-left: 57px">RX 5700(XT)</input>
+        <br>
+        <input type="checkbox" value="6800">RX 6800(XT)</input>
+        <input type="checkbox" value="6900" style="margin-left: 46px">RX 6900XT</input>
+        <br>
+        <input type="checkbox" value="todas" checked> Todas</input>
+
+        <button type="button" id="atualizarLista">Atualizar lista</button>
+    </form>
+
     <table id="precos" border="1">
     </table>
 </body>
