--- a/public/index.html
+++ b/public/index.html
@@ -26,10 +26,9 @@
         <input type="checkbox" value="6800" style="margin-left: 46px">RX 6800(XT)</input>
         <br>
         <input type="checkbox" value="6900">RX 6900XT</input>
+        <input type="checkbox" value="todas" checked style="margin-left: 57px"> Todas</input>
         <br>
-        <input type="checkbox" value="todas" checked> Todas</input>
-
-        <button type="button" id="atualizarLista">Atualizar lista</button>
+        <button type="button" id="atualizarLista" style="margin-left: 75px">Atualizar lista</button>
     </form>
 
     <table id="precos" border="1">
