--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,8 @@
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"
         integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script src="./script.js"> </script>
+    <script data-aff="amazon.com.br, www.amazon.com.br : tag = vgabrasil-20" src="https://cdn.jsdelivr.net/npm/affiliate@1.2/dist/affiliate.js" async id="aff-js"></script>
+    <title>Lista de GPUs para mineração - Preços</title>
 </head>
 
 <body onLoad="buildTable()">
@@ -31,6 +33,7 @@
         <button type="button" id="atualizarLista" style="margin-left: 75px">Atualizar lista</button>
     </form>
 
+    <h1>Lista de placas para mineração disponíveis</h1>
     <table id="precos" border="1">
     </table>
 </body>
