Add filter for 1080, 2060, 2070 and 2080

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,13 @@
 
     <form style="width:50%">
         <input type="checkbox" value="1650">GTX 1650(Super)</input>
-        <input type="checkbox" value="1660" style="margin-left: 20px">GTX 1660(Super/Ti)</input>
+        <input type="checkbox" value="1660" style="margin-left: 19px">GTX 1660(Super/Ti)</input>
+        <br>
+        <input type="checkbox" value="1080" >GTX 1080(Ti)</input>
+        <input type="checkbox" value="2060" style="margin-left: 43px">RTX 2060(Super)</input>
+        <br>
+        <input type="checkbox" value="2070">RTX 2070(Super)</input>
+        <input type="checkbox" value="2080" style="margin-left: 21px">RTX 2080(Super/Ti)</input>
         <br>
         <input type="checkbox" value="3060">RTX 3060Ti</input>
         <input type="checkbox" value="3070" style="margin-left: 56px">RTX 3070</input>
