--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
         integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script src="./script.js"> </script>
     <script data-aff="www.amazon.com.br : tag = vgabrasil-20" src="https://cdn.jsdelivr.net/npm/affiliate@1.2/dist/affiliate.js" async id="aff-js"></script>
+    <script data-ad-client="ca-pub-3464247548638873" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <title>Lista de GPUs para mineração - Preços</title>
 </head>
 
