--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,8 @@
 <html>
 
 <head>
+    <link rel="stylesheet" href="index.css">
+
     <script type="text/javascript" src="Precos.json"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"
         integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
@@ -12,7 +14,7 @@
 
 <body onLoad="buildTable()">
 
-    <form style="width:50%">
+    <form class="formFiltro">
         <input type="checkbox" value="1650">GTX 1650(Super)</input>
         <input type="checkbox" value="1660" style="margin-left: 19px">GTX 1660(Super/Ti)</input>
         <br>
@@ -41,7 +43,7 @@
     </form>
 
     <h1>Lista de placas para mineração disponíveis</h1>
-    <table id="precos" border="1">
+    <table id="precos" class="tabelaPrecos" border="1">
     </table>
 </body>
 
