--- a/public/Fontes.html
+++ b/public/Fontes.html
@@ -19,7 +19,7 @@
     <nav>
         <ul>
             <li><a href="index.html">GPUs</a></li>
-            <li><a class="active" href="fontes.html">Fontes</a></li>
+            <li><a class="active" href="Fontes.html">Fontes</a></li>
         </ul>
     </nav>
     <form class="formFiltro">
