--- a/public/index.html
+++ b/public/index.html
@@ -1,49 +1,108 @@
 <html>
 
 <head>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="./css/index.css">
 
-    <script type="text/javascript" src="Precos.json"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"
         integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-    <script src="./script.js"> </script>
-    <script data-aff="www.amazon.com.br : tag = vgabrasil-20" src="https://cdn.jsdelivr.net/npm/affiliate@1.2/dist/affiliate.js" async id="aff-js"></script>
-    <script data-ad-client="ca-pub-3464247548638873" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <script src="./js/VGA.js"> </script>
+    <script data-aff="www.amazon.com.br : tag = vgabrasil-20"
+        src="https://cdn.jsdelivr.net/npm/affiliate@1.2/dist/affiliate.js" async id="aff-js"></script>
+
     <title>Lista de GPUs para mineração - Preços</title>
 </head>
 
 <body onLoad="buildTable()">
-
     <form class="formFiltro">
-        <input type="checkbox" value="1650">GTX 1650(Super)</input>
-        <input type="checkbox" value="1660" style="margin-left: 19px">GTX 1660(Super/Ti)</input>
-        <br>
-        <input type="checkbox" value="1080" >GTX 1080(Ti)</input>
-        <input type="checkbox" value="2060" style="margin-left: 43px">RTX 2060(Super)</input>
-        <br>
-        <input type="checkbox" value="2070">RTX 2070(Super)</input>
-        <input type="checkbox" value="2080" style="margin-left: 21px">RTX 2080(Super/Ti)</input>
-        <br>
-        <input type="checkbox" value="3060">RTX 3060Ti</input>
-        <input type="checkbox" value="3070" style="margin-left: 56px">RTX 3070</input>
-        <br>
-        <input type="checkbox" value="3080">RTX 3080</input>
-        <input type="checkbox" value="3090" style="margin-left: 69px">RTX 3090</input>
-        <br>
-        <input type="checkbox" value="5500">RX 5500XT</input>
-        <input type="checkbox" value="5600" style="margin-left: 57px">RX 5600XT</input>
-        <br>
-        <input type="checkbox" value="5700">RX 5700(XT)</input>
-        <input type="checkbox" value="6800" style="margin-left: 46px">RX 6800(XT)</input>
-        <br>
-        <input type="checkbox" value="6900">RX 6900XT</input>
-        <input type="checkbox" value="todas" checked style="margin-left: 57px"> Todas</input>
-        <br>
-        <button type="button" id="atualizarLista" style="margin-left: 75px">Atualizar lista</button>
-    </form>
+        <div class="filterLeft">
+            <div class="filterRow">
+                <input type="checkbox" value="1650" id="filter1650"></input>
+                <label for="filter1650">GTX 1650(Super)</label>
 
-    <h1>Lista de placas para mineração disponíveis</h1>
-    <table id="precos" class="tabelaPrecos" border="1">
+                <input type="checkbox" value="1660" id="filter1660"></input>
+                <label for="filter1660">GTX 1660(Super/Ti)</label>
+            </div>
+
+            <div class="filterRow">
+                <input type="checkbox" value="1080" id="filter1080"></input>
+                <label for="filter1080">GTX 1080(Ti)</label>
+
+                <input type="checkbox" value="2060" id="filter2060"></input>
+                <label for="filter2060">RTX 2060(Super)</label>
+            </div>
+
+            <div class="filterRow">
+                <input type="checkbox" value="2070" id="filter2070"></input>
+                <label for="filter2070">RTX 2070(Super)</label>
+
+                <input type="checkbox" value="2080" id="filter2080"></input>
+                <label for="filter2080">RTX 2080(Super/Ti)</label>
+            </div>
+
+            <div class="filterRow">
+                <input type="checkbox" value="3060" id="filter3060"></input>
+                <label for="filter3060">RTX 3060Ti</label>
+
+                <input type="checkbox" value="3070" id="filter3070"></input>
+                <label for="filter3070">RTX 3070</label>
+            </div>
+
+            <div class="filterRow">
+                <input type="checkbox" value="3080" id="filter3080"></input>
+                <label for="filter3080">RTX 3080</label>
+                <input type="checkbox" value="3090" id="filter3090"></input>
+                <label for="filter3090">RTX 3090</label>
+            </div>
+
+            <div class="filterRow">
+                <input type="checkbox" value="5500" id="filter5500"></input>
+                <label for="filter5500">RX 5500XT</label>
+
+                <input type="checkbox" value="5600" id="filter5600"></input>
+                <label for="filter5600">RX 5600XT</label>
+            </div>
+
+            <div class="filterRow">
+                <input type="checkbox" value="5700" id="filter5700"></input>
+                <label for="filter5700">RX 5700(XT)</label>
+
+                <input type="checkbox" value="6800" id="filter6800"></input>
+                <label for="filter6800">RX 6800(XT)</label>
+            </div>
+
+            <div class="filterRow">
+                <input type="checkbox" value="6900" id="filter6900"></input>
+                <label for="filter6900">RX 6900XT</label>
+
+                <input type="checkbox" checked value="todas" id="filtertodas"></input>
+                <label for="filtertodas">Todas</label>
+            </div>
+            <div id="containerButtonFilter">
+                <button type="button" id="atualizarLista" style="margin-left: 75px">Atualizar lista</button>
+            </div>
+        </div>
+        <div class="filterRight">
+
+            <input type="checkbox" id="filtroSonoro" />
+            <label for="filtroSonoro" style="margin-left: 20px">Tocar som ao encontrar</label>
+            <br>
+            <label for="filtroKeyword">Palavra-chave</label>
+            <input type="text" id="filtrokeyWord" />
+
+            <label for="filtroValue" style="margin-left: 20px">Valor máximo</label>
+            <input type="number" id="filtroValue" />
+
+            <button type="button" id="criarAlerta">Criar alerta</button>
+
+            <div id="containerMonitoramento">
+                <h3>Alertas ativos</h3>
+            </div>
+        </div>
+    </form>
+    <div class="tableTitle">
+        <h1>Lista de placas para mineração disponíveis</h1>
+    </div>
+    <table id="PrecosGPU" class="tabelaPrecos" border="1">
     </table>
 </body>
 
