Change on the way audio is played

--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@
 </head>
 
 <body onLoad="buildTable()">
+    <audio src="./audio/Alerta.ogg" crossOrigin="anonymous" id="audioAlert"></audio>
     <form class="formFiltro">
         <div class="filterLeft">
             <div class="filterRow">
