[Feat] Improvements on filter

--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,6 @@
-<html>
+<!DOCTYPE html>
+
+<html lang="pt">
 
 <head>
     <link rel="stylesheet" href="./css/index.css">
@@ -42,39 +44,45 @@
 
             <div class="filterRow">
                 <input type="checkbox" value="3060" id="filter3060"></input>
-                <label for="filter3060">RTX 3060Ti</label>
+                <label for="filter3060">RTX 3060</label>
+                
+                <input type="checkbox" value="3060Ti" id="filter3060Ti"></input>
+                <label for="filter3060Ti">RTX 3060Ti</label>
+            </div>
 
+            <div class="filterRow">
                 <input type="checkbox" value="3070" id="filter3070"></input>
                 <label for="filter3070">RTX 3070</label>
-            </div>
 
-            <div class="filterRow">
                 <input type="checkbox" value="3080" id="filter3080"></input>
                 <label for="filter3080">RTX 3080</label>
+            </div>
+
+            <div class="filterRow">
                 <input type="checkbox" value="3090" id="filter3090"></input>
                 <label for="filter3090">RTX 3090</label>
-            </div>
 
-            <div class="filterRow">
                 <input type="checkbox" value="5500" id="filter5500"></input>
                 <label for="filter5500">RX 5500XT</label>
+            </div>
 
+            <div class="filterRow">
                 <input type="checkbox" value="5600" id="filter5600"></input>
                 <label for="filter5600">RX 5600XT</label>
-            </div>
 
-            <div class="filterRow">
                 <input type="checkbox" value="5700" id="filter5700"></input>
                 <label for="filter5700">RX 5700(XT)</label>
-
-                <input type="checkbox" value="6800" id="filter6800"></input>
-                <label for="filter6800">RX 6800(XT)</label>
             </div>
 
             <div class="filterRow">
+                <input type="checkbox" value="6800" id="filter6800"></input>
+                <label for="filter6800">RX 6800(XT)</label>
+
                 <input type="checkbox" value="6900" id="filter6900"></input>
                 <label for="filter6900">RX 6900XT</label>
+            </div>
 
+            <div class="filterRow">
                 <input type="checkbox" checked value="todas" id="filtertodas"></input>
                 <label for="filtertodas">Todas</label>
             </div>
