[Feat] Google analytics

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,15 @@
     <script src="./js/VGA.js"> </script>
     <script data-aff="www.amazon.com.br : tag = vgabrasil-20"
         src="https://cdn.jsdelivr.net/npm/affiliate@1.2/dist/affiliate.js" async id="aff-js"></script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-64RRJ0ZNNE"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
 
+        gtag('config', 'G-64RRJ0ZNNE');
+    </script>
     <title>Lista de GPUs para mineração - Preços</title>
 </head>
 
@@ -45,7 +53,7 @@
             <div class="filterRow">
                 <input type="checkbox" value="3060" id="filter3060"></input>
                 <label for="filter3060">RTX 3060</label>
-                
+
                 <input type="checkbox" value="3060Ti" id="filter3060Ti"></input>
                 <label for="filter3060Ti">RTX 3060Ti</label>
             </div>
