--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
 
 <head>
     <link rel="stylesheet" href="./css/index.css">
+    <link rel="stylesheet" href="./css/navbar.css">
 
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"
         integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
@@ -23,6 +24,12 @@
 </head>
 
 <body onLoad="buildTable()">
+    <nav>
+        <ul>
+            <li><a class="active" href="index.html">GPUs</a></li>
+            <li><a href="Fontes.html">Fontes</a></li>
+        </ul>
+    </nav>
     <audio src="./audio/Alerta.ogg" crossOrigin="anonymous" id="audioAlert"></audio>
     <form class="formFiltro">
         <div class="filterLeft">
