--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"
         integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script src="./js/VGA.js"> </script>
-    <script data-aff="www.amazon.com.br : tag = vgabrasil0b-20"
+    <script data-aff="www.amazon.com.br : tag = vgabrasil0a-20"
         src="https://cdn.jsdelivr.net/npm/affiliate@1.2/dist/affiliate.js" async id="aff-js"></script>
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-64RRJ0ZNNE"></script>
