[Feat] Add checkbox to automatically open the link for the alerts found in a new page/tab

--- a/public/index.html
+++ b/public/index.html
@@ -103,6 +103,9 @@
             <input type="checkbox" id="filtroSonoro" />
             <label for="filtroSonoro" style="margin-left: 20px">Tocar som ao encontrar</label>
             <br>
+            <input type="checkbox" id="openLinksCheckbox" />
+            <label for="openLinksCheckbox" style="margin-left: 20px">Abrir links encontrados em nova aba/janela</label>
+            <br>
             <label for="filtroKeyword">Palavra-chave</label>
             <input type="text" id="filtrokeyWord" />
 
