feat: improvements and fixes

--- a/public/index.html
+++ b/public/index.html
@@ -100,7 +100,7 @@
         </div>
         <div class="filterRight">
 
-            <input type="checkbox" id="filtroSonoro" />
+            <input type="checkbox" checked id="filtroSonoro" />
             <label for="filtroSonoro" style="margin-left: 20px">Tocar som ao encontrar</label>
             <br>
             <input type="checkbox" id="openLinksCheckbox" />
@@ -117,6 +117,9 @@
             <div id="containerMonitoramento">
                 <h3>Alertas ativos</h3>
             </div>
+
+
+            <button type="button" id="stopAlert">Parar alerta</button>
         </div>
     </form>
     <div class="tableTitle">
